--- a/views/index.html
+++ b/views/index.html
@@ -100,7 +100,7 @@
 			</div>
 		</div>
 		<!-- Modal -->
-		<div class="modal fade" id="instructions" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+		<div class="modal fade" align = 'left' id="instructions" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
