added a close button on highscore

--- a/views/index.html
+++ b/views/index.html
@@ -97,6 +97,9 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content" align='center' id = 'high_scores_div'>
 				</div>
+				<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
 			</div>
 		</div>
 		<!-- Modal -->
