fixed hidden score div

--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
 				<input type="text" id="guess" placeholder="Your Guess" class='form-control' style="margin:auto; width: 60%"> <br>
 				<button onclick="guessNumber()" class="btn btn-primary" id='guess_submit'>Submit</button>
 			</div>
-			<div class = "col scrollable" id ="CowBullValue"></div>
+			<div class = "col scrollable" id ="CowBullValue" style="display: none"></div>
 		</div>
 		<div class='row' id ='correct_answer' style="display: none;"></div>
 		<div class = "row" id="after_win" style="display: none;">
@@ -96,9 +96,9 @@
 		<div class="modal fade" id="high_scores_div_main" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content" align='center' id = 'high_scores_div'>
-				</div>
 				<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
 				</div>
 			</div>
 		</div>
