fixed the typo in instructions

--- a/views/index.html
+++ b/views/index.html
@@ -126,9 +126,9 @@
 						<p>For example: <br>
 							Secret Number : 1234 <br>
 							Your guess:  1248 <br>
-							Hint : 2 Cows 0 Bulls => Digits 1, 2 and 4 present in both the secret number and your guess. 1 and 2 are in correct places so 2 Cows but 4 is not in correct place so 1 Bull. <br>
+							Hint : 2 Cows 0 Bulls => Digits 1, 2 and 4 are present in both the secret number and your guess. 1 and 2 are in correct places so 2 Cows but 4 is not in correct place so 1 Bull. <br>
 							Your guess: 2356 <br>
-							Hint : 0 Cows 2 Bulls => Digits 2 and 3 present in both the secret number and your guess. 2 and 3 are not in the correct places so 2 Bulls. <br>
+							Hint : 0 Cows 2 Bulls => Digits 2 and 3 are present in both the secret number and your guess. 2 and 3 are not in the correct places so 2 Bulls. <br>
 							<h3>Now, you try: </h3>
 							Secret Number: 4567<br>
 							Guessed Number: 8760<br>
