fixed the typo in instructions

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 		<script src="js/main.js"></script>
 	</head>
 	<body>
-		<h1 align='center'><font color='red'>Cow</font><font color='green'>bull</font></h1>
+		<h1 align='center'><font color='green'>Cow</font><font color='red'>bull</font></h1>
 		<h3 align='center'>Hello, Can you guess the number that I am thinking of?</h3>
 		<!-- Button trigger modal -->
 		<br><br>
