--- a/views/index.html
+++ b/views/index.html
@@ -144,5 +144,6 @@
 					</div>
 				</div>
 			</div>
+			<footer class="footer"><h5><i>Designed by Krishna Gaire - Github</h5></i></footer>
 		</body>
 	</html>
